Remove the enterprise tag as we are open source now.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@6 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,14 +2,14 @@
 
 	<parent>
 		<groupId>com.clinovo.clincapture</groupId>
-    	<artifactId>clincapture-enterprise</artifactId>
+    	<artifactId>clincapture</artifactId>
 		<version>1.0.2.1-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>core-enterprise</artifactId>
+	<artifactId>core</artifactId>
 	<packaging>jar</packaging>
-	<name>ClinCapture Core Enterprise</name>
+	<name>ClinCapture Core</name>
 
 	<properties>
 		<catalina.home>C:\Program Files\Apache Software Foundation\Tomcat 6.0</catalina.home>
