--- a/web/pom.xml
+++ b/web/pom.xml
@@ -2,14 +2,14 @@
 
 	<parent>
 		<groupId>com.clinovo.clincapture</groupId>
-		<artifactId>clincapture-enterprise</artifactId>
+		<artifactId>clincapture</artifactId>
 		<version>1.0.2.1-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>web-enterprise</artifactId>
+	<artifactId>web</artifactId>
 	<packaging>war</packaging>
-	<name>ClinCapture Web Application Enterprise</name>
+	<name>ClinCapture Web Application</name>
 
 	<properties>
 		<published.version>${project.version} ${build.revision}</published.version>
@@ -18,7 +18,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.clinovo.clincapture</groupId>
-			<artifactId>core-enterprise</artifactId>
+			<artifactId>core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
@@ -240,7 +240,7 @@
 	</dependencies>
 	
 	<build>
-        <finalName>ClinCapture-enterprise-${project.version}</finalName>
+        <finalName>ClinCapture-${project.version}</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
