--- a/ws-cabig/pom.xml
+++ b/ws-cabig/pom.xml
@@ -4,19 +4,19 @@
 
     <parent>
 		<groupId>com.clinovo.clincapture</groupId>
-		<artifactId>clincapture-enterprise</artifactId>
+		<artifactId>clincapture</artifactId>
 		<version>1.0.2.1-SNAPSHOT</version>
 	</parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>ws-cabig-enterprise</artifactId>
+    <artifactId>ws-cabig</artifactId>
     <packaging>war</packaging>
-    <name>ClinCapture Web Services - caBIG - Enterprise</name>
+    <name>ClinCapture Web Services - caBIG</name>
 
     <dependencies>
     	<dependency>
             <groupId>com.clinovo.clincapture</groupId>
-            <artifactId>core-enterprise</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
 	    <dependency>
             <groupId>rome</groupId>
@@ -262,7 +262,7 @@
 		</plugins>
 	</reporting>
     <build>
-    	<finalName>ClinCapture-ws-cabig-enterprise-${project.version}</finalName>
+    	<finalName>ClinCapture-ws-cabig-${project.version}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
