--- a/ws/pom.xml
+++ b/ws/pom.xml
@@ -2,19 +2,19 @@
     
     <parent>
         <groupId>com.clinovo.clincapture</groupId>
-        <artifactId>clincapture-enterprise</artifactId>
+        <artifactId>clincapture</artifactId>
         <version>1.0.2.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>web-services-enterprise</artifactId>
+    <artifactId>web-services</artifactId>
     <packaging>war</packaging>
-    <name>ClinCapture Web Services Enterprise</name>
+    <name>ClinCapture Web Services</name>
     
     <dependencies>
     	<dependency>
             <groupId>com.clinovo.clincapture</groupId>
-            <artifactId>core-enterprise</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
 	    <dependency>
             <groupId>rome</groupId>
@@ -187,7 +187,7 @@
 		</dependency>
 	</dependencies>
     <build>
-    	<finalName>ClinCapture-ws-enterprise-${project.version}</finalName>
+    	<finalName>ClinCapture-ws-${project.version}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
