Re factor test properties out of pom file to properties file.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@15 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/test/resources/test.properties
+++ b/core/src/test/resources/test.properties
@@ -1,23 +1,35 @@
 # Database configuration
-dbName=${test.dbName}
+db=clincapture-test
+dbPort=5432
+dbUser=clincapture
+dbPass=clincapture
+dbType=postgres
+dbHost=localhost
+dbName=clincapture-test
 driver=org.postgresql.Driver
+
 #driver=org.postgresql.Driver
-url=${test.dbUrl}${test.dbName}
-username=${test.dbUsername}
-password=${test.dbPassword}
-hibernate.dialect=${test.hibernateDialect}
+username=clincapture
+password=clincapture
+url=jdbc:postgresql://localhost:5432/clincapture-test
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 changeLogFile=src\\main\\resources\\migration\\master.xml
 
-
-
-dbType=${test.db}
-dbUser=${test.dbUsername}
-dbPass=${test.dbPassword}
-db=${test.dbName}
-dbPort=5432
-dbHost=localhost
 # Locale
-locale= ${test.locale}
+locale=en_us
+
+mail.host=mail.akazaresearch.com
+mail.port=25
+mail.protocol=smtp
+mail.username=
+mail.password=
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
+mail.smtps.auth=false
+mail.smtps.starttls.enable=false
+mail.smtp.connectiontimeout=100
+mail.error.msg=developers@openclinica.org
+
 # Mail 
 # 2 - filePath
 #
