--- a/pom.xml
+++ b/pom.xml
@@ -531,9 +531,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<!-- Using a beta version due to a bug in the previous stable version 
-						here's the bug info http://jira.codehaus.org/browse/MASSEMBLY-104 -->
-					<version>2.2-beta-1</version>
+					<version>2.4</version>
 					<configuration>
 						<outputDirectory>/var/www/html/ClinCapture-1.0.2-distro</outputDirectory>
 						<descriptors>
