Add the build.revision back to the pom file.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@20 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 	<properties>
         <config.id>default</config.id>
 		<spring.version>3.2.1.RELEASE</spring.version>
+        <build.revision>Rev: ${SVN_REVISION}</build.revision>
 		<spring.security.version>3.1.3.RELEASE</spring.security.version>
         <config.file>src/main/resources/datainfo.properties</config.file>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
