Fixed regression: rules not able to upload without the rules.xsd file, this is somehow magically included with the include/exclude patterns in the pom file.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@26 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -586,6 +586,14 @@
 					<include>**/*.xml</include>
 				</includes>
 			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<excludes>
+					<exclude>**/*.properties</exclude>
+					<exclude>**/*.xml</exclude>
+				</excludes>
+			</resource>
 		</resources>
 
 		<filters>
