--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <config.id>default</config.id>
 		<spring.version>3.2.1.RELEASE</spring.version>
         <build.revision>Rev: ${SVN_REVISION}</build.revision>
+        <scm.path>https://svn.clinovo.com/clincapture/trunk</scm.path>
 		<spring.security.version>3.1.3.RELEASE</spring.security.version>
         <config.file>src/main/resources/datainfo.properties</config.file>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
