Fixes #94: jsp files were excluded from resources filter . Submitted by Mark
git-svn-id: https://svn.clinovo.com/clincapture/trunk@29 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -277,6 +277,9 @@
 							<resource>
 								<directory>src/main/webapp</directory>
 								<filtering>true</filtering>
+								<excludes>
+									<exclude>**/*.jsp</exclude>
+								</excludes>
 							</resource>
 						</webResources>
 					</configuration>
