Change in access settings for this file
git-svn-id: https://svn.clinovo.com/clincapture/trunk@37 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/filters/default.properties
+++ b/web/src/main/filters/default.properties
@@ -13,7 +13,7 @@
 #############################################################################
 dbType=postgres
 dbUser=clincapture
-dbPass=bizbridge
+dbPass=clincapture
 db=clincapture
 dbPort=5432
 dbHost=localhost
