Fixed #108: Custom properties moved to build.properties. Submitted by: markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@52 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,7 +12,7 @@
 	<name>ClinCapture Web Application</name>
 
 	<properties>
-		<catalina.home>C:\Program Files\Apache Software Foundation\Tomcat 6.0</catalina.home>
+		<main.basedir>${project.parent.basedir}</main.basedir>
 		<published.version>${project.version} ${build.revision}</published.version>
 	</properties>
 
@@ -284,6 +284,10 @@
 						</webResources>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>properties-maven-plugin</artifactId>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -318,6 +322,10 @@
 							<skipTests>true</skipTests>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>properties-maven-plugin</artifactId>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -332,6 +340,10 @@
 			<build>
 				<finalName>clincapture</finalName>
 				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>properties-maven-plugin</artifactId>
+					</plugin>
 					<plugin>
 						<groupId>org.codehaus.cargo</groupId>
 						<artifactId>cargo-maven2-plugin</artifactId>
@@ -350,6 +362,10 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-war-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
 					</plugin>
 				</plugins>
 			</build>
