--- a/web/src/main/resources/datainfo.properties
+++ b/web/src/main/resources/datainfo.properties
@@ -11,10 +11,10 @@
 #
 # REQUIRED
 ##################################################################
+db=${db}
 dbType=${dbType}
 dbUser=${dbUser}
 dbPass=${dbPass}
-db=${db}
 dbPort=${dbPort}
 dbHost=${dbHost}
 
@@ -29,8 +29,6 @@ dbHost=${dbHost}
 #
 # REQUIRED
 ##################################################################
-#filePath=c\:\\ClinCapture\\tomcat\\ClinCapture.data\\
-#filePath=${catalina.home}/${WEBAPP.lower}.data/
 filePath=${filePath}
 
 ##################################################################
@@ -60,7 +58,7 @@ filePath=${filePath}
 #
 # REQUIRED.  
 ##################################################################
-userAccountNotification=${userAccountNotification}
+userAccountNotification=email
 
 ##################################################################
 # 5 - adminEmail
@@ -71,7 +69,7 @@ userAccountNotification=${userAccountNotification}
 #
 # REQUIRED
 ##################################################################
-adminEmail=${adminEmail}
+adminEmail=admin@example.com
 
 ##################################################################
 # 6- Spring Based Email System
@@ -85,17 +83,17 @@ adminEmail=${adminEmail}
 # to true.
 # Configure connection timeout. Preconfigred to 5 secs
 ##################################################################
-mailHost=${mailHost}
-mailPort=${mailPort}
-mailProtocol=${mailProtocol}
-mailUsername=${mailUsername}
-mailPassword=${mailPassword}
-mailSmtpAuth=${mailSmtpAuth}
-mailSmtpStarttls.enable=${mailSmtpStarttls.enable}
-mailSmtpsAuth=${mailSmtpsAuth}
-mailSmtpsStarttls.enable=${mailSmtpsStarttls.enable}
-mailSmtpConnectionTimeout=${mailSmtpConnectionTimeout}
-mailErrorMsg=${mailErrorMsg}
+mailPort=465
+mailSmtpAuth=false
+mailProtocol=smtps
+mailSmtpsAuth=true
+mailUsername=username
+mailPassword=password
+mailHost=mail.smtp.com
+mailSmtpStarttls.enable=false
+mailSmtpsStarttls.enable=false
+mailSmtpConnectionTimeout=1000
+mailErrorMsg=clincapture@example.com
 
 ##################################################################
 # 7 - passwd_expiration
@@ -106,7 +104,7 @@ mailErrorMsg=${mailErrorMsg}
 #
 # REQUIRED.
 ##################################################################
-passwdExpirationTime=${passwdExpirationTime}
+passwdExpirationTime=360
 
 ##################################################################
 # 8 - sysURL
@@ -121,7 +119,7 @@ passwdExpirationTime=${passwdExpirationTime}
 #
 # REQUIRED
 ##################################################################
-sysURL=${sysURL}
+sysURL=http://localhost:8080/${WEBAPP}/MainMenu
 
 #############################################################################
 # 9 - max_inactive_interval
@@ -133,7 +131,7 @@ sysURL=${sysURL}
 #
 # REQUIRED
 #############################################################################
-maxInactiveInterval=${maxInactiveInterval}
+maxInactiveInterval=3600
 
 ##################################################################
 # 10- change_passwd_required
@@ -147,7 +145,7 @@ maxInactiveInterval=${maxInactiveInterval}
 # 
 # REQUIRED. 
 ##################################################################
-change_passwd_required=${change_passwd_required}
+change_passwd_required=1
 
 ##################################################################
 # 11 - Logging configuration
@@ -165,16 +163,15 @@ change_passwd_required=${change_passwd_required}
 # REQUIRED
 ##################################################################
 #log.dir=${catalina.home}/logs/clincapture-ws
-#log.dir=C\:\\ClinCapture/tomcat/logs/clincapture
 # Specify the log location - local/syslog/both
 #
+logLocation=local
 log.dir=${log.dir}
-logLocation=${logLocation}
 #
 # Specify logging level - trace/debug/info/warn/error
-logLevel=${logLevel}
-syslog.host=${syslog.host}
-syslog.port=${syslog.port}
+logLevel=error
+syslog.port=514
+syslog.host=localhost
 
 ##################################################################
 # 12 - CRF File Upload Configuration
@@ -203,9 +200,9 @@ syslog.port=${syslog.port}
 #
 # REQUIRED
 ##################################################################
-org.quartz.jobStore.misfireThreshold=${org.quartz.jobStore.misfireThreshold}
-org.quartz.threadPool.threadCount=${org.quartz.threadPool.threadCount}
-org.quartz.threadPool.threadPriority=${org.quartz.threadPool.threadPriority}
+org.quartz.threadPool.threadCount=1
+org.quartz.threadPool.threadPriority=5
+org.quartz.jobStore.misfireThreshold=18000000
 
 ##################################################################
 # 14 - CCTS configuration
@@ -218,7 +215,7 @@ org.quartz.threadPool.threadPriority=${org.quartz.threadPool.threadPriority}
 #
 # NOT REQUIRED
 ##################################################################
-ccts.waitBeforeCommit=${ccts.waitBeforeCommit}
+ccts.waitBeforeCommit=6000
 
 ##################################################################
 # 15 - Facility information
@@ -287,9 +284,10 @@ extract.number=99
 #
 # REQUIRED
 ##################################################################
-collectStats=${collectStats}
-usage.stats.host=${usage.stats.host}
-usage.stats.port=${usage.stats.port}
+collectStats=false
+usage.stats.port=514
+usage.stats.host=
+ClinCapture.version=${build.revision}
 
 ##################################################################
 # 19- max_inactive_account
@@ -302,7 +300,7 @@ usage.stats.port=${usage.stats.port}
 #
 # REQUIRED
 ##################################################################
-max_inactive_account=${max_inactive_account}
+max_inactive_account=90
 
 ##################################################################
 # 20- password_reuse_frequency
@@ -314,7 +312,7 @@ max_inactive_account=${max_inactive_account}
 #
 # REQUIRED
 ##################################################################
-password_reuse_frequency=${password_reuse_frequency}
+password_reuse_frequency=180
 
 
 ##################################################################
@@ -325,8 +323,8 @@ password_reuse_frequency=${password_reuse_frequency}
 #
 # REQUIRED
 ##################################################################
-include.reporting=${include.reporting}
-pentaho.url=${pentaho.url} 
+include.reporting=false
+pentaho.url=http://pentaho:9090/pentaho/Login
 
 ##################################################################
 # 22 - Menu Skin Color
