--- a/ws/pom.xml
+++ b/ws/pom.xml
@@ -11,6 +11,10 @@
     <packaging>war</packaging>
     <name>ClinCapture Web Services</name>
     
+    <properties>
+    	<main.basedir>${project.parent.basedir}</main.basedir>
+    </properties>
+    
     <dependencies>
     	<dependency>
             <groupId>com.clinovo.clincapture</groupId>
@@ -229,6 +233,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
 			</plugin>
         </plugins>
     </build>
