--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
     </repositories>  
 	  
 	<properties>
-        <config.id>default</config.id>
 		<spring.version>3.2.1.RELEASE</spring.version>
+		<main.basedir>${project.basedir}</main.basedir>
         <build.revision>Rev: ${SVN_REVISION}</build.revision>
         <scm.path>https://svn.clinovo.com/clincapture/trunk</scm.path>
 		<spring.security.version>3.1.3.RELEASE</spring.security.version>
@@ -575,6 +575,24 @@
 						</systemProperties>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>properties-maven-plugin</artifactId>
+					<version>1.0-alpha-2</version>
+					<executions>
+						<execution>
+							<phase>initialize</phase>
+							<goals>
+								<goal>read-project-properties</goal>
+							</goals>
+							<configuration>
+								<files>
+									<file>${main.basedir}/build.properties</file>
+								</files>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
@@ -596,11 +614,6 @@
 				</excludes>
 			</resource>
 		</resources>
-
-		<filters>
-			<filter>src/main/filters/default.properties</filter>
-			<filter>src/main/filters/${config.id}.properties</filter>
-		</filters>
 	</build>
 
 	<profiles>
