Rename the profile name to be more explicit.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@56 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -309,7 +309,7 @@
 
 	<profiles>
 		<profile>
-			<id>noTest</id>
+			<id>run-selenium-tests</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
