--- a/pom.xml
+++ b/pom.xml
@@ -535,7 +535,7 @@
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>2.4</version>
 					<configuration>
-						<outputDirectory>/var/www/html/ClinCapture-1.0.2-distro</outputDirectory>
+						<outputDirectory>target/distribution/</outputDirectory>
 						<descriptors>
 							<descriptor>src/assemble/clincapture-assemble.xml</descriptor>
 						</descriptors>
