Add the log file to ignore.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@83 14881f01-568e-124b-961a-bb94932aa8d1

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ C:\\\\ClinCapture/
 c:\\ClinCapture\\tomcat\\ClinovoEDC.data\\crf/
 c:\\ClinCapture\\tomcat\\ClinovoEDC.data\\rules/
 c:\\ClinCapture\\tomcat\\ClinovoEDC.data\\xslt/
+core/openclinica-test.log
 
 .DS_Store
 
