--- a/core/pom.xml
+++ b/core/pom.xml
@@ -283,7 +283,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jmock</groupId>
-			<artifactId>jmock-junit3</artifactId>
+			<artifactId>jmock-junit4</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-legacy</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
 		</dependency>
 	</dependencies>
 
