--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     </repositories>  
 	  
 	<properties>
+		<jmock.version>2.6.0</jmock.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<main.basedir>${project.basedir}</main.basedir>
         <build.revision>Rev: ${SVN_REVISION}</build.revision>
@@ -306,7 +307,7 @@
 			<dependency>
 	            <groupId>junit</groupId>
 	            <artifactId>junit</artifactId>
-				<version>4.0</version>
+				<version>4.11</version>
 	            <scope>test</scope>
 	        </dependency>
 		    <dependency>
@@ -336,15 +337,27 @@
 			<dependency>
 	            <groupId>org.jmock</groupId>
 	            <artifactId>jmock</artifactId>
-	            <version>2.6.0-RC2</version>
-	            <scope>test</scope>
+	            <version>${jmock.version}</version>
+				<scope>test</scope>
 	        </dependency>
 	        <dependency>
 	            <groupId>org.jmock</groupId>
-	            <artifactId>jmock-junit3</artifactId>
-	            <version>2.5.1</version>
-	            <scope>test</scope>
+	            <artifactId>jmock-junit4</artifactId>
+	            <version>${jmock.version}</version>
+				<scope>test</scope>
 	        </dependency>
+	        <dependency>
+				<groupId>org.jmock</groupId>
+				<artifactId>jmock-legacy</artifactId>
+				<version>${jmock.version}</version>
+				<scope>test</scope>
+			</dependency>
+	        <dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>1.8.4</version>
+				<scope>test</scope>
+			</dependency>
 	        <dependency>
 	            <groupId>org.codehaus.jackson</groupId>
 	            <artifactId>jackson-mapper-asl</artifactId>
