--- a/pom.xml
+++ b/pom.xml
@@ -578,7 +578,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.13</version>
+					<version>2.14.1</version>
 					<configuration>
 						<systemProperties>
 							<property>
@@ -586,6 +586,7 @@
 								<value>target/cobertura/cobertura.ser</value>
 							</property>
 						</systemProperties>
+						<argLine>-Xms1024m -Xmx1024m</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
