--- a/pom.xml
+++ b/pom.xml
@@ -345,6 +345,12 @@
 	            <artifactId>jmock-junit4</artifactId>
 	            <version>${jmock.version}</version>
 				<scope>test</scope>
+				<exclusions>
+			        <exclusion>
+			            <groupId>junit</groupId>
+			            <artifactId>junit-dep</artifactId>
+       				 </exclusion>
+    			</exclusions>
 	        </dependency>
 	        <dependency>
 				<groupId>org.jmock</groupId>
