Added default catalina.home value to prevent Jenkins from failing when the workspace is recreated
git-svn-id: https://svn.clinovo.com/clincapture/trunk@93 14881f01-568e-124b-961a-bb94932aa8d1

--- a/build.properties
+++ b/build.properties
@@ -10,7 +10,7 @@ dbPass=clincapture
 themeColor=violet
 
 # Tomcat installation directory
-catalina.home=path_to_tomcat
+catalina.home=C:\\Program Files\\Apache Software Foundation\\Tomcat 6.0
 
 # Log settings
 log.dir=${catalina.home}/logs/clincapture
