Fixes #124: Fixes supporting web service calls to be made externally from the system. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@96 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -227,7 +227,12 @@
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+            
 		<dependency>
 			<groupId>org.jdom</groupId>
 			<artifactId>jdom</artifactId>
