Set these files to be skipped from checking local modifications during the release preparation phase.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@112 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -613,6 +613,18 @@
 						</execution>
 					</executions>
 				</plugin>
+				<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-release-plugin</artifactId>
+				  <version>2.4.1</version>
+				  <configuration>
+				    ...
+				    <checkModificationExcludes>
+				      <checkModificationExclude>core/openclinica-test.log</checkModificationExclude>
+				      <checkModificationExclude>build.properties</checkModificationExclude>
+				    </checkModificationExcludes>
+				  </configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
