--- a/web/src/main/resources/datainfo.properties
+++ b/web/src/main/resources/datainfo.properties
@@ -169,7 +169,7 @@ logLocation=local
 log.dir=${log.dir}
 #
 # Specify logging level - trace/debug/info/warn/error
-logLevel=trace
+logLevel=error
 syslog.port=514
 syslog.host=localhost
 
