--- a/web/pom.xml
+++ b/web/pom.xml
@@ -330,6 +330,33 @@
 			</build>
 		</profile>
 		<profile>
+			<id>run-sauce-tests</id>
+			<activation>
+				<property>
+					<name>test</name>
+					<value>**/saucelabs/*</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skipTests>false</skipTests>
+							<excludes>
+								<exclude>**/selenium/*</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>properties-maven-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>tomcat-deploy</id>
 			<activation>
 				<property>
