Fixes #57: Communication Protocol for accessing external web services through Edit Checks. Submitted by MarkG
git-svn-id: https://svn.clinovo.com/clincapture/trunk@133 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -2126,5 +2126,15 @@
         <servlet-name>urlRewriterServlet</servlet-name>
         <url-pattern>/ClinicalData/*</url-pattern>
     </servlet-mapping>
+    
+	<servlet>
+		<servlet-name>randomizeServlet</servlet-name>
+        <servlet-class>com.clinovo.servlet.RandomizeServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>randomizeServlet</servlet-name>
+        <url-pattern>/randomize</url-pattern>
+    </servlet-mapping>
 
 </web-app>
