Add these properties to the datainfo.properties because they are needed for randomization.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@137 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/datainfo.properties
+++ b/web/src/main/resources/datainfo.properties
@@ -335,3 +335,10 @@ pentaho.url=http://pentaho:9090/pentaho/Login
 #
 ##################################################################
 themeColor=${themeColor}
+
+# Randomization properties.
+randomizationusername=${randomizationusername}
+randomizationpassword=${randomizationpassword}
+
+randomizationUrl=https://www.randomize.net/api//RandomizeAPIService/RandomizePatientDelegated
+randomizationAuthenticationUrl=https://www.randomize.net/api/RandomizeAPIService/Authenticate
