Stub randomization properties to build.properties
git-svn-id: https://svn.clinovo.com/clincapture/trunk@138 14881f01-568e-124b-961a-bb94932aa8d1

--- a/build.properties
+++ b/build.properties
@@ -10,10 +10,14 @@ dbPass=clincapture
 themeColor=violet
 
 # Tomcat installation directory
-catalina.home=C:\\Program Files\\Apache Software Foundation\\Tomcat 6.0
+catalina.home=/usr/local/tomat/6
 
 # Log settings
 log.dir=${catalina.home}/logs/clincapture
 
 # Repository for uploaded and generated files
 filePath=${catalina.home}/clincapture.data/
+
+# Randomization
+randomizationusername=username
+randomizationpassword=password
