Push to update licensing policy for ClinCapture, fix for unit testing
git-svn-id: https://svn.clinovo.com/clincapture/trunk@141 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/test/resources/test.properties
+++ b/core/src/test/resources/test.properties
@@ -1,17 +1,17 @@
 # Database configuration
-db=blank-test
+db=clincapture-test
 dbPort=5432
-dbUser=clinica
-dbPass=clinica
+dbUser=clincapture
+dbPass=clincapture
 dbType=postgres
 dbHost=localhost
-dbName=blank-test
+dbName=clincapture-test
 driver=org.postgresql.Driver
 
 #driver=org.postgresql.Driver
-username=clinica
-password=clinica
-url=jdbc:postgresql://localhost:5432/blank-test
+username=clincapture
+password=clincapture
+url=jdbc:postgresql://localhost:5432/clincapture-test
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 changeLogFile=src\\main\\resources\\migration\\master.xml
 
