Fixes #304: Handles randomization scenarios involving one unique Trial Id. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@240 14881f01-568e-124b-961a-bb94932aa8d1

--- a/build.properties
+++ b/build.properties
@@ -18,6 +18,11 @@ log.dir=${catalina.home}/logs/clincapture
 # Repository for uploaded and generated files
 filePath=${catalina.home}/clincapture.data/
 
-# Randomization
+# Randomization Settings 
+ 
+# Trial ID 
+randomizationTrialId=0 
+ 
+# Authentication Details 
 randomizationusername=username
 randomizationpassword=password
