--- a/web/src/main/resources/datainfo.properties
+++ b/web/src/main/resources/datainfo.properties
@@ -337,6 +337,8 @@ pentaho.url=http://pentaho:9090/pentaho/Login
 themeColor=${themeColor}
 
 # Randomization properties.
+
+randomizationTrialId=${randomizationTrialId}
 randomizationusername=${randomizationusername}
 randomizationpassword=${randomizationpassword}
 
