--- a/web/pom.xml
+++ b/web/pom.xml
@@ -238,6 +238,10 @@
 			<groupId>org.codehaus.castor</groupId>
 			<artifactId>castor</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
