[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.clinovo.com/clincapture/trunk@315 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.clinovo.clincapture</groupId>
     	<artifactId>clincapture</artifactId>
-		<version>1.0.2.7</version>
+		<version>1.0.2.8-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
