--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 	</properties>
 	
     <modules>
+        <module>medical-coding</module>
         <module>core</module>
         <module>web</module>
         <module>ws</module> 
@@ -40,6 +41,11 @@
             <dependency>
                 <groupId>com.clinovo.clincapture</groupId>
                 <artifactId>core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+			<dependency>
+                <groupId>com.clinovo.clincapture</groupId>
+                <artifactId>medical-coding</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -521,6 +527,11 @@
 				<groupId>org.jmesa</groupId>
 				<artifactId>jmesa</artifactId>
 				<version>2.4.2</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-httpclient</groupId>
+				<artifactId>commons-httpclient</artifactId>
+				<version>3.1</version>
 			</dependency>
 	    </dependencies>
     </dependencyManagement>
