--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -2154,5 +2154,15 @@
         <servlet-name>randomizeServlet</servlet-name>
         <url-pattern>/randomize</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+		<servlet-name>medicalCodingServlet</servlet-name>
+        <servlet-class>com.clinovo.servlet.MedicalCodingServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>medicalCodingServlet</servlet-name>
+        <url-pattern>/code</url-pattern>
+    </servlet-mapping>
 
 </web-app>
