Add the datainfo properties for medical-coding as they were missed in inital commit
git-svn-id: https://svn.clinovo.com/clincapture/trunk@410 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/datainfo.properties
+++ b/web/src/main/resources/datainfo.properties
@@ -344,3 +344,8 @@ randomizationpassword=${randomizationpassword}
 
 randomizationUrl=https://www.randomize.net/api//RandomizeAPIService/RandomizePatientDelegated
 randomizationAuthenticationUrl=https://www.randomize.net/api/RandomizeAPIService/Authenticate
+
+# Medical Coding properties
+
+level=${level}
+dictionary=${dictionary}
