Add the test log to ignore during release
git-svn-id: https://svn.clinovo.com/clincapture/trunk@429 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -629,10 +629,10 @@
 				  <artifactId>maven-release-plugin</artifactId>
 				  <version>2.4.1</version>
 				  <configuration>
-				    ...
 				    <checkModificationExcludes>
-				      <checkModificationExclude>core/openclinica-test.log</checkModificationExclude>
-				      <checkModificationExclude>build.properties</checkModificationExclude>
+				    	<checkModificationExclude>build.properties</checkModificationExclude>
+				    	<checkModificationExclude>medical-coding/test.log</checkModificationExclude>
+				      	<checkModificationExclude>core/openclinica-test.log</checkModificationExclude>
 				    </checkModificationExcludes>
 				  </configuration>
 				</plugin>
