Fixes #483: Fix the logging implementation. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@478 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -283,6 +283,12 @@
 			<groupId>org.akaza.openclinica.odm</groupId>
 			<artifactId>openclinica-odm</artifactId>
 			<version>0.1.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jmock</groupId>
