--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     </repositories>  
 	  
 	<properties>
+		<slf4j.version>1.5.6</slf4j.version>
 		<jmock.version>2.6.0</jmock.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<main.basedir>${project.basedir}</main.basedir>
@@ -215,7 +216,6 @@
 				<artifactId>commons-io</artifactId>
 				<version>1.4</version>
 			</dependency>
-			<!-- Needed by commons-validator -->
 			<dependency>
 				<groupId>oro</groupId>
 				<artifactId>oro</artifactId>
@@ -270,11 +270,23 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi</artifactId>
 				<version>3.0.1-FINAL</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>net.sourceforge.jexcelapi</groupId>
 				<artifactId>jxl</artifactId>
 				<version>2.6.12</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>struts</groupId>
@@ -382,12 +394,12 @@
 				<scope>test</scope>
 				<exclusions>
 					<exclusion>
-						<artifactId>org.slf4j</artifactId>
-						<groupId>slf4j-nop</groupId>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-nop</artifactId>
 					</exclusion>
 					<exclusion>
-						<artifactId>org.slf4j</artifactId>
-						<groupId>slf4j-api</groupId>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-api</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
@@ -395,23 +407,22 @@
 	        <dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.5.6</version>
+				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.5.6</version>
-				<scope>test</scope>
+				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jul-to-slf4j</artifactId>
-				<version>1.5.6</version>
+				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
-				<version>1.5.6</version>
+				<version>${slf4j.version}</version>
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
