Fixes #501: Improve the existing test 'ImportCRFDataServiceTest' for the ticket #490. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@536 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -25,6 +25,13 @@
 			<groupId>com.clinovo.clincapture</groupId>
 			<artifactId>medical-coding</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.clinovo.clincapture</groupId>
+            <artifactId>core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
 			<artifactId>saxon</artifactId>
@@ -246,6 +253,11 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 	
 	<build>
