Focus should be on the databases we support
git-svn-id: https://svn.clinovo.com/clincapture/trunk@537 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/test/resources/test.properties
+++ b/core/src/test/resources/test.properties
@@ -13,12 +13,11 @@ username=clincapture
 password=clincapture
 url=jdbc:postgresql://localhost:5432/clincapture-test
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-changeLogFile=src\\main\\resources\\migration\\master.xml
 
 # Locale
 locale=en_us
 
-mail.host=mail.akazaresearch.com
+mail.host=mail.clinovo.com
 mail.port=25
 mail.protocol=smtp
 mail.username=
@@ -28,7 +27,7 @@ mail.smtp.starttls.enable=false
 mail.smtps.auth=false
 mail.smtps.starttls.enable=false
 mail.smtp.connectiontimeout=100
-mail.error.msg=developers@openclinica.org
+mail.error.msg=developers@clinovo.org
 
 # Mail 
 # 2 - filePath
