Add this file to release ignore
git-svn-id: https://svn.clinovo.com/clincapture/trunk@562 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -644,6 +644,7 @@
 				    	<checkModificationExclude>build.properties</checkModificationExclude>
 				    	<checkModificationExclude>medical-coding/test.log</checkModificationExclude>
 				      	<checkModificationExclude>core/openclinica-test.log</checkModificationExclude>
+				      	<checkModificationExclude>web/openclinica-test.log</checkModificationExclude>
 				    </checkModificationExcludes>
 				  </configuration>
 				</plugin>
